readCatalogueByTag api
