# gardabook-services/api/swagger.yaml
@@ -53,18 +53,10 @@ paths:
         required: true
         type: "string"
         default: "retrieve"
-      - name: "tag"
+      - name: "tags"
         in: "query"
         description: "Status values that need to be considered for filter"
-        required: false
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
-      - name: "providerName"
-        in: "query"
-        description: "Providers of the catalogue"
-        required: false
+        required: true
         type: "array"
         items:
           type: "string"
